<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">滴滴停车</string>
    <string name="app_slogan">滴滴一下&#160;&#160;&#160;停车无忧</string>
    <string name="app_copyright">copyright&#160;&#160;2015&#160;&#160;by&#160;&#160;didipark</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="user_register">用户注册</string>
    <string name="input_account">用户昵称</string>
    <string name="input_phone">注册手机号码</string>
    <string name="input_password">至少6位字母或数字</string>
    <string name="input_password_login">请输入密码</string>
    <string name="input_confirm_password">再输入一次密码</string>
    <string name="btn_register">注册</string>
    <string name="btn_finish">下一步</string>
    <string name="check_string">&#160;&#160;同意&#160;</string>
    <string name="and">&#160;和&#160;</string>
    <string name="btn_turn_login">已有账号了？马上登陆</string>
    <string name="btn_turn_register">还没有账户？回到注册</string>
    <string name="register_other_way">&#160;其他方式</string>
    <string name="register_description">注册</string>
    <string name="smssdk_bind_mobile_show">注册或绑定手机演示</string>
    <string name="smssdk_contact">通讯录好友</string>
    <string name="smssdk_appkey_dialog_title">请输入您的应用信息</string>
    <string name="smssdk_appkey">AppKey</string>
    <string name="smssdk_appkey_hint">请输入您的AppKey</string>
    <string name="smssdk_appsecret">AppSecret</string>
    <string name="smssdk_appsecrethint">请输入您的AppSecret</string>
    <string name="login_topbar">用户登陆</string>
    <string name="audit_topbar">停车申请</string>
    <string name="login_button">登陆</string>
    <string name="fragment_user">用户资料</string>
    <string name="fragment_carport">车位信息</string>
    <string name="fragment_publish">我的车位</string>
    <string name="fragment_more">更多</string>
    <string name="menu_carport">车位</string>
    <string name="menu_user">我的</string>
    <string name="menu_publish">发布</string>
    <string name="menu_more">更多</string>
    <string name="account_coupon">停车记录</string>
    <string name="account_favorite">我的收藏</string>
    <string name="account_order">我的订单</string>
    <string name="account_data">&#160;个人信息</string>
    <string name="account_pay">我的收益</string>
    <string name="account_activity">官方活动</string>
    <string name="account_comment">我的评价</string>
    <string name="account_member">嘀嘀停车官网</string>
    <string name="account_take_out">退出当前账号</string>
    <string name="user_info">基本信息</string>
    <string name="update_psd_topbar">修改密码</string>
    <string name="update_nick_topbar">修改昵称</string>
    <string name="user_info_update_phone">修改手机号</string>
    <string name="user_info_update">确认修改</string>
    <string name="user_info_carCard">请输入您的车牌号</string>
    <string name="user_info_security">账户安全等级</string>
    <string name="user_info_password">登陆密码&#160;&#160;</string>
    <string name="publish_carport_remain">个剩余车位</string>
    <string name="publish_add_carport">添加车位</string>
    <string name="web">嘀嘀停车官网</string>
    <string name="web2">活动中心</string>
    <string name="customer_comment_topbar">用户评价</string>
    <string name="my_comment_topbar">我的评价</string>
    <string name="publish_add_decribe">用力的赞美一下自己的车位~</string>
    <string name="publish_add_time_money">请输入价格&#160;(￥/h)</string>
    <string name="publish_add_time_money_hint1">提示:较高的性价比能让你的收益更高哦</string>
    <string name="publish_add_time_money_hint2">提示:地理位置越好的地方价格越高，反之亦然</string>
    <string name="publish_add_time_money_hint3">提示:刚提交的车位，价格低一些会吸引更多人来哦</string>
    <string name="publish_add_num_carport">请输入车位数量</string>
    <string name="publish_add_num_carport_hint">警告:请如实填写您的车位数量，否则会将取消您上架车位</string>
    <string name="publish_add_photo_decribe">添加照片</string>
    <string name="pop_run">运营</string>
    <string name="pop_set">管理这个车位</string>
    <string name="update_carport_state">提示:修改车位当前状态，下架后暂不提供恢复功能哦</string>
    <string name="update_carport_info">修改车位信息</string>
    <string name="carport_message">车位信息</string>
    <string name="carport_park">申请停车</string>
    <string name="carport_need_know">购买须知：</string>
    <string name="carport_validity">有效期：</string>
    <string name="carport_validity_content">仅限申请当天及时使用（周末，法定节假日通用）</string>
    <string name="carport_rule">使用提示：</string>
    <string name="carport_rule_content1">·&#160;申请同意后，嘀嘀停车会先收取一小时作为押金</string>
    <string name="carport_rule_content2">·&#160;在停车前，最好与车位商家详细商谈停车事宜</string>
    <string name="carport_rule_content4">·&#160;滴滴停车只是作为一个第三方中介，不负责期间双方相关安全事宜</string>
    <string name="carport_remain">当前剩余&#160;</string>
    <string name="carport_comment">用户评价</string>
    <string name="carport_all_comment">查看全部评价</string>
    <string name="carport_remain_unit">&#160;个车位</string>
    <string name="notification_title">停车申请</string>
    <string name="notification_title_ans">申请回复</string>
    <string name="notification_agree">同意</string>
    <string name="notification_disagree">拒绝</string>
    <string name="pop_report">举报</string>
    <string name="pop_favorite">收藏</string>
    <string name="audit_message">申请人信息</string>
    <string name="audit_time">申请时间</string>
    <string name="audit_type">付款方式</string>
    <string name="audit_type_content">预先支付一小时车费，其余部分按小时收费</string>
    <string name="pay_topbar">预付费用</string>
    <string name="pay_mode">选择支付方式</string>
    <string name="pay_ali">支付宝支付</string>
    <string name="pay_ali_hint">推荐有支付宝账号的用户使用</string>
    <string name="pay_wechat">微信支付</string>
    <string name="pay_ensure">确认支付</string>
    <string name="pay_unit">元</string>
    <string name="pay_wechat_hint">首次支付需要安装插件</string>
    <string name="favorite_topbar">我的收藏</string>
    <string name="order_topbar">订单记录</string>
    <string name="order_place">停车地点</string>
    <string name="order_id">订单编号</string>
    <string name="order_time">订单时间</string>
    <string name="order_nickname">用户昵称</string>
    <string name="order_phone">联系电话</string>
    <string name="more_order_topbar">订单详情</string>
    <string name="more_order_money">支付金额</string>
    <string name="more_order_addr_hint">位置：</string>
    <string name="more_order_describe_hint">描述：</string>
    <string name="add_comment_level">评价等级</string>
    <string name="add_comment_content">评价内容</string>
    <string name="add_comment_topbar">用户评价</string>
    <string name="add_comment_submit">提交评价</string>
    <string name="add_comment_content_hint">车位附近环境如何,&#160;&#160;是否符合店主的描述,&#160;&#160;车位是否值得被推荐？&#160;&#160;(写够10个字,才是好同志~)</string>
    <string name="update_psd_old">请输入旧密码</string>
    <string name="update_psd_new">请输入新密码</string>
    <string name="update_psd_confi">再次输入新密码</string>

</resources>